// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getReviewStatusText() has reviews ready 1`] = `
<ForwardRef>
  Next Review:
   
  <ForwardRef>
    Now!
  </ForwardRef>
</ForwardRef>
`;

exports[`getReviewStatusText() no reviews unlocked 1`] = `
<ForwardRef>
  No reviews unlocked
</ForwardRef>
`;

exports[`getReviewStatusText() on vacation 1`] = `
<ForwardRef>
  On Vacation:
   
  <ForwardRef>
    since
    Dec 26th 2017
  </ForwardRef>
</ForwardRef>
`;

exports[`getReviewStatusText() review date is future 1`] = `
<ForwardRef>
  Next Review:
   
  <ForwardRef>
    in
     
    about 2 hours
  </ForwardRef>
</ForwardRef>
`;

exports[`getReviewStatusText() review date is past 1`] = `
<ForwardRef>
  Next Review:
   
  <ForwardRef>
    Loading...
  </ForwardRef>
</ForwardRef>
`;

exports[`getReviewStatusText() sane default 1`] = `
<ForwardRef>
  Next Review:
   
  <ForwardRef>
    Loading...
  </ForwardRef>
</ForwardRef>
`;

exports[`getReviewStatusText() user is loading 1`] = `
<ForwardRef>
  Next Review:
   
  <ForwardRef>
    Loading...
  </ForwardRef>
</ForwardRef>
`;
